# zoom_chef

./: .gitignore  CMakeLists.txt
collision_demo/: CMakeLists.txt  controller_demo.cpp  cup.urdf  panda_arm.urdf  simulation_demo.cpp  simviz_demo.cpp  visualization_demo.cpp  world.urdf
hw0/: hw0.cpp  hw0_viz.cpp  rprbot.urdf
hw0_solution/: CMakeLists.txt  hw0.cpp  hw0_viz.cpp  rprbot.urdf  rprpbot.urdf  world.urdf
hw0_solution/data_files/: plotting_hw0.py  question_e1.txt  question_e2.txt  question_f1.txt  question_f2.txt  question_g.txt
hw1/: world.urdf
hw1_solution/: CMakeLists.txt  hw1.cpp  panda_arm_simulation.urdf  simviz_hw1.cpp
hw1_solution/data_files/: plotting_hw1.py  question1.txt  question2.txt  question3.txt  question4.txt  question5.txt  question6.txt  question6_bis.txt
hw2_solution/: CMakeLists.txt  hw2.cpp
hw2_solution/data_files/: plotting_hw2.py  question1.txt  question2a.txt  question2c.txt  question2d.txt  question3.txt  question4i.txt  question4ii.txt  question4iii.txt  question4iv.txt
project_starter_code/: CMakeLists.txt  controller.cpp  simviz.cpp  world_O2.urdf  world_iiwa.urdf  world_mmp_panda_two_arm.urdf  world_panda_gripper.urdf  world_quad_1_arm.urdf  world_quad_2_arm.urdf  world_toro.urdf
